--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- link to Google Font 'Open Sans'  -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- link to css style sheet -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- link to font awesome -->
@@ -11,6 +15,24 @@
     <title>htmlcss-dropbox</title>
 </head>
 <body>
+
+    <!-- HEADER -->
+
+    <header>
+
+    </header>
+
+    <!-- MAIN -->
+
+    <main>
+
+    </main>
+
+    <!-- FOOTER -->
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
