add content to nav section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
 
     <header>
 
+        <nav class="flex jc-between ai-center">
+            <ul class="flex jc-between ai-center">
+                <li>
+                    <img src="./images/logo-small.png" alt="logo Dropbox">
+                </li>
+                <li>
+                    <a href="http://">Perchè Dropbox</a>
+                </li>
+                <li>
+                    <a href="http://">Funzioni</a>
+                </li>
+                <li>
+                    <a href="">Piani e Prezzi</a>
+                </li>
+            </ul>
+            <ul class="flex jc-between ai-center">
+                <li>
+                    <a href="http://">Supporto</a>
+                </li>
+                <li>
+                    <a href="http://">Contatta l'ufficio vendite</a>
+                </li>
+                <li>
+                    <a href="">Accedi</a>
+                </li>
+                <li>
+                    <a href="http://">Inizia</a>
+                </li>
+            </ul>
+        </nav>
+
     </header>
 
     <!-- MAIN -->
