add content to header's main section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- link to css style sheet -->
     <link rel="stylesheet" href="./css/style.css">
     <!-- link to font awesome -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>htmlcss-dropbox</title>
 </head>
 <body>
@@ -50,6 +50,21 @@
                 </li>
             </ul>
         </nav>
+
+        <div class="header-main-section">
+            <div class="container-70">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="flex jc-between ai-center">
+                    <div class="col-smaller flex column jc-start ai-start">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <a href="">Inizia la prova gratuita</a>
+                        <span>Annulla in qualsiasi momento</span>
+                        <a href="http://"><i class="fa-solid fa-arrow-down"></i></a>
+                    </div>
+                    <img class="col-bigger" src="./images/jumbo.png" alt="header jumbo image">
+                </div>
+            </div>
+        </div>
 
     </header>
 
