--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="">Accedi</a>
                 </li>
                 <li>
-                    <a href="http://">Inizia</a>
+                    <a class="btn" href="http://">Inizia</a>
                 </li>
             </ul>
         </nav>
@@ -54,10 +54,10 @@
         <div class="header-main-section">
             <div class="container-70">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="flex jc-between ai-center">
+                <div class="flex jc-between ai-start">
                     <div class="col-smaller flex column jc-start ai-start">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                        <a href="">Inizia la prova gratuita</a>
+                        <a class="btn" href="">Inizia la prova gratuita</a>
                         <span>Annulla in qualsiasi momento</span>
                         <a href="http://"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
