--- a/index.html
+++ b/index.html
@@ -71,6 +71,124 @@
     <!-- MAIN -->
 
     <main>
+        <div class="container-60">
+
+            <h2>Trova il piano business che fa per te</h2>
+
+            <div class="flex jc-between ai-stretch">
+                <div class="card-plan">
+                    <div>
+                        <i class="fa-solid fa-user"></i> Team
+                    </div>
+                    <div>
+                        <h3>Professional</h3>
+                        <h5>€ 12.00</h5>
+                        <span>/ mese</span> <br>
+                        <div><i class="fa-solid fa-user"></i> 1 utente</div>
+                        <div><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</div>
+                        <div><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                    </div>
+                    <div>
+                        <div>
+                            <a href="" class="btn">Prova gratis per 30 giorni</a>
+                        </div>
+                        <div>
+                            <span>oppure </span><a href="">Acquista ora</a>
+                        </div>
+                        <h5>Punti salienti del piano</h5>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Cartelle offline su dispositivi mobili</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-plan">
+                    <div>
+                        <i class="fa-solid fa-people-group"></i> Team
+                    </div>
+                    <div>
+                        <h3>Advanced</h3>
+                        <h5>€ 18.00</h5>
+                        <span>/ utente / mese</span> <br>
+                        <div><i class="fa-solid fa-user"></i> 3 o più utenti</div>
+                        <div><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui il tuo team ha bisogno</div>
+                        <div><i class="fa-solid fa-share-nodes"></i> Sofisticate funzioni di controllo, per tenere al sicuro tutti i file del tuo team</div>
+                    </div>
+                    <div>
+                        <div>
+                            <a href="" class="btn">Prova gratis per 30 giorni</a>
+                        </div>
+                        <div>
+                            <span>oppure </span><a href="">Acquista ora</a>
+                        </div>
+                        <h5>Punti salienti del piano</h5>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Nessun limite di spazio per i file</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Cartelle offline su dispositivi mobili</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Risparmio del 50% rispetto alle iscrizioni singole</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Possibilità di inserire nuovi membri del team</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Gestione dei permessi in base ai ruoli</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-plan">
+                    <div>
+                        <i class="fa-solid fa-building"></i> Azienda
+                    </div>
+                    <div>
+                        <h3>Enterprise</h3>
+                        <h5>Contattaci</h5>
+                        <span>-</span> <br>
+                        <div><i class="fa-solid fa-user"></i> 10 o più utenti</div>
+                        <div><i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda</div>
+                        <div><i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata, per aiutare gli amministratori in una gestione su larga scala</div>
+                    </div>
+                    <div>
+                        <div>
+                            <a href="" class="btn">Prova gratis per 30 giorni</a>
+                        </div>
+                        <div>
+                            <span>oppure </span><a href="">Acquista ora</a>
+                        </div>
+                        <h5>Punti salienti del piano</h5>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Cartelle offline su dispositivi mobili</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Servizio assistenza 24/h</span>
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <span <i class="fa-solid fa-check"></i></span>
+                            <span>Possibilità di personalizzazzione totale</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container-60">
+            
+        </div>
 
     </main>
 
