insert content in the "partner" section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <h2>Trova il piano business che fa per te</h2>
 
             <div class="flex jc-between ai-stretch">
-                <div class="card-plan">
-                    <div>
+                <div class="card-plan border-grey">
+                    <div class="bottom-grey">
                         <i class="fa-solid fa-user"></i> Team
                     </div>
                     <div>
@@ -86,7 +86,7 @@
                         <span>/ mese</span> <br>
                         <div><i class="fa-solid fa-user"></i> 1 utente</div>
                         <div><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</div>
-                        <div><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                        <div><i class="fa-solid fa-share-nodes"></i> Funzioni per una produttività premium ed una condivisione file semplice e sicura</div>
                     </div>
                     <div>
                         <div>
@@ -106,8 +106,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-plan">
-                    <div>
+                <div class="card-plan border-grey">
+                    <div class="bottom-grey">
                         <i class="fa-solid fa-people-group"></i> Team
                     </div>
                     <div>
@@ -148,8 +148,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-plan">
-                    <div>
+                <div class="card-plan border-grey">
+                    <div class="bottom-grey">
                         <i class="fa-solid fa-building"></i> Azienda
                     </div>
                     <div>
@@ -186,8 +186,35 @@
 
         </div>
 
+        <div class="container-60 border-grey">
+            <div class="bottom-grey">
+                <i class="fa-solid fa-building"></i> Team
+            </div>
+            <div class="flex jc-between ai-start">
+                <div class="col-bigger">
+                    <h3>Enterprise</h3>
+                    <h5>Contatta l'ufficio vendite per i prezzi</h5>
+                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                </div>
+                <div class="col-smaller">
+                    <a href="" class="btn">Conttatta l'ufficio vendite</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-60 flex jc-between ai-start">
+            <div class="col-bigger">
+                <img src="./images/partner.png" alt="partner">
+            </div>
+            <div class="col-smaller partner-text">
+                <h3>Entra in contatto con un partner Dropbox</h3>
+                <p class="partner-p">Trova un partner Dropbox e Hellosign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi azziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                <a href="" class="btn-light border-grey">Trova un partner</a>
+            </div>
+        </div>
+
         <div class="container-60">
-            
+            <h2>Esegui più operazioni con DropBob Business</h2>
         </div>
 
     </main>
