add cards to tasks section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2>Trova il piano business che fa per te</h2>
 
             <div class="flex jc-between ai-stretch">
-                <div class="card-plan border-grey">
+                <div class="card border-grey">
                     <div class="bottom-grey">
                         <i class="fa-solid fa-user"></i> Team
                     </div>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-plan border-grey">
+                <div class="card border-grey">
                     <div class="bottom-grey">
                         <i class="fa-solid fa-people-group"></i> Team
                     </div>
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-plan border-grey">
+                <div class="card border-grey">
                     <div class="bottom-grey">
                         <i class="fa-solid fa-building"></i> Azienda
                     </div>
@@ -215,6 +215,38 @@
 
         <div class="container-60">
             <h2>Esegui più operazioni con DropBob Business</h2>
+            <div class="flex jc-between ai-center wrap">
+                <div class="card">
+                    <img src="./images/business-feature-switching-tools.png" alt="switch tools image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/business-feature-send-files-it.png" alt="send files image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/business-feature-coordinate-it.png" alt="coordinate image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/business-feature-integrations-it.png" alt="integrations image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/business-feature-multi-device.png" alt="multi device image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/business-feature-security.png" alt="security feature image">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+            </div>
         </div>
 
     </main>
