add basic content to companies section

--- a/index.html
+++ b/index.html
@@ -249,6 +249,31 @@
             </div>
         </div>
 
+        <div class="container-60">
+            <h2>Pin di 500.000 team utilizzano Dronbox Business</h2>
+            <a href="">Scopri di più sui nostri clienti</a>
+        </div>
+
+        <section class="flex jc-between ai-center">
+            <div class="square-big flex jc-between ai-center wrap">
+                <div id="designit" class="square-small">
+                    <img src="./images/designit.svg" alt="designit logo">
+                </div>
+                <div id="asu" class="square-small"></div>
+                <div id="uf" class="square-small"></div>
+                <div id="topps" class="square-small"></div>
+            </div>
+            <div class="square-big">
+
+            </div>
+            <div class="square-big flex jc-between ai-center wrap">
+                <div id="wbr" class="square-small"></div>
+                <div id="hearst" class="square-small"></div>
+                <div id="lonely" class="square-small"></div>
+                <div id="ccoutdoor" class="square-small"></div>
+            </div>
+        </section>
+
     </main>
 
     <!-- FOOTER -->
