add companies' logos in the relative section

--- a/index.html
+++ b/index.html
@@ -259,18 +259,32 @@
                 <div id="designit" class="square-small">
                     <img src="./images/designit.svg" alt="designit logo">
                 </div>
-                <div id="asu" class="square-small"></div>
-                <div id="uf" class="square-small"></div>
-                <div id="topps" class="square-small"></div>
+                <div id="asu" class="square-small">
+                    <img src="./images/arizona_state_university.svg" alt="asu logo">
+                </div>
+                <div id="uf" class="square-small">
+                    <img src="./images/university_of_florida.svg" alt="uf logo">
+                </div>
+                <div id="topps" class="square-small">
+                    <img src="./images/topps.svg" alt="topps logo">
+                </div>
             </div>
-            <div class="square-big">
-
+            <div id="designit-grey" class="square-big">
+                <img src="./images/designit.svg" alt="designit logo">
             </div>
             <div class="square-big flex jc-between ai-center wrap">
-                <div id="wbr" class="square-small"></div>
-                <div id="hearst" class="square-small"></div>
-                <div id="lonely" class="square-small"></div>
-                <div id="ccoutdoor" class="square-small"></div>
+                <div id="wbr" class="square-small">
+                    <img src="./images/world_bicycle_relief.svg" alt="wbr logo">
+                </div>
+                <div id="hearst" class="square-small">
+                    <img src="./images/hearst_corp.svg" alt="hearst logo">
+                </div>
+                <div id="lonely" class="square-small">
+                    <img src="./images/lonely_planet.svg" alt="lonely planet logo">
+                </div>
+                <div id="ccoutdoor" class="square-small">
+                    <img src="./images/clear_channel.svg" alt="clear channel logo">
+                </div>
             </div>
         </section>
 
