add call to action section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         </nav>
 
-        <div class="header-main-section">
+        <div class="header-bg">
             <div class="container-70">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex jc-between ai-start">
@@ -276,7 +276,7 @@
                 <div id="wbr" class="square-small">
                     <img src="./images/world_bicycle_relief.svg" alt="wbr logo">
                 </div>
-                <div id="hearst" class="square-small">
+                <div class="square-small header-bg">
                     <img src="./images/hearst_corp.svg" alt="hearst logo">
                 </div>
                 <div id="lonely" class="square-small">
@@ -287,6 +287,11 @@
                 </div>
             </div>
         </section>
+
+        <div class="cta flex jc-around ai-center header-bg">
+            <h2>Porta Dropbox Business nella tua azienda</h2>
+            <a href="" class="btn-light">Inizia la tua prova gratuita</a>
+        </div>
 
     </main>
 
