improved header section with hero and spaces

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
         <div class="header-bg">
             <div class="container-70">
-                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="flex jc-between ai-start">
+                <h1>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
+                <div class="hero flex jc-between ai-start">
                     <div class="col-smaller flex column jc-start ai-start">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <a class="btn" href="">Inizia la prova gratuita</a>
@@ -332,8 +332,6 @@
             </details>
 
         </section>
-
-        
 
     </main>
 
