changes to top cards inner layout

--- a/index.html
+++ b/index.html
@@ -98,8 +98,14 @@
                         <h5>€ 12.00</h5>
                         <span>/ mese</span> <br>
                         <div><i class="fa-solid fa-user"></i> 1 utente</div>
-                        <div><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</div>
-                        <div><i class="fa-solid fa-share-nodes"></i> Funzioni per una produttività premium ed una condivisione file semplice e sicura</div>
+                        <div class="flex jc-start ai-start">
+                            <i class="fa-solid fa-folder"></i> 
+                            <span> 5 TB di spazio di archiviazione sicuro</span> 
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <i class="fa-solid fa-share-nodes"></i> 
+                            <span>Funzioni per una produttività premium ed una condivisione file semplice e sicura</span> 
+                        </div>
                     </div>
                     <div>
                         <a href="" class="btn">Prova gratis per 30 giorni</a>
@@ -127,8 +133,14 @@
                         <h5>€ 18.00</h5>
                         <span>/ utente / mese</span> <br>
                         <div><i class="fa-solid fa-user"></i> 3 o più utenti</div>
-                        <div><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui il tuo team ha bisogno</div>
-                        <div><i class="fa-solid fa-share-nodes"></i> Sofisticate funzioni di controllo, per tenere al sicuro tutti i file del tuo team</div>
+                        <div class="flex jc-start ai-start">
+                            <i class="fa-solid fa-folder"></i> 
+                            <span> Tutto lo spazio di cui il tuo team ha bisogno</span> 
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <i class="fa-solid fa-share-nodes"></i> 
+                            <span>Sofisticate funzioni di controllo, per tenere al sicuro tutti i file del tuo team</span> 
+                        </div>
                     </div>
                     <div>
                         <a href="" class="btn">Prova gratis per 30 giorni</a>
@@ -168,8 +180,14 @@
                         <h5>Contattaci</h5>
                         <span>-</span> <br>
                         <div><i class="fa-solid fa-user"></i> 10 o più utenti</div>
-                        <div><i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda</div>
-                        <div><i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata, per aiutare gli amministratori in una gestione su larga scala</div>
+                        <div class="flex jc-start ai-start">
+                            <i class="fa-solid fa-folder"></i> 
+                            <span> Soluzioni personalizzabili per la tua azienda</span> 
+                        </div>
+                        <div class="flex jc-start ai-start">
+                            <i class="fa-solid fa-share-nodes"></i> 
+                            <span> Assistenza personalizzata, per aiutare gli amministratori in una gestione su larga scala</span> 
+                        </div>
                     </div>
                     <div>
                         <div>
