--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!-- HEADER -->
 
     <header>
-
+        <!-- nav -->
         <nav class="flex jc-between ai-center">
+            <!-- left ul in nav -->
             <ul class="flex jc-between ai-center">
                 <li>
                     <img src="./images/logo-small.png" alt="logo Dropbox">
@@ -35,6 +36,7 @@
                     <a href="">Piani e Prezzi</a>
                 </li>
             </ul>
+            <!-- right ul in nav -->
             <ul class="flex jc-between ai-center">
                 <li>
                     <a href="http://">Supporto</a>
@@ -50,10 +52,11 @@
                 </li>
             </ul>
         </nav>
-
+        <!-- text + image part of header section -->
         <div class="header-bg">
             <div class="container-70">
                 <h1>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
+                <!-- HERO -->
                 <div class="hero flex jc-between ai-start">
                     <div class="col-smaller flex column jc-start ai-start">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
