fixed square-small elements & cta BG

--- a/index.html
+++ b/index.html
@@ -390,40 +390,40 @@
 
         <section class="flex jc-between ai-center" id="institutions">
             <div class="square-big flex jc-between ai-center wrap">
-                <div id="designit" class="square-small">
+                <div id="designit" class="square-small flex jc-center ai-center">
                     <img src="./images/designit.svg" alt="designit logo">
                 </div>
-                <div id="asu" class="square-small">
+                <div id="asu" class="square-small flex jc-center ai-center">
                     <img src="./images/arizona_state_university.svg" alt="asu logo">
                 </div>
-                <div id="uf" class="square-small">
+                <div id="uf" class="square-small flex jc-center ai-center">
                     <img src="./images/university_of_florida.svg" alt="uf logo">
                 </div>
-                <div id="topps" class="square-small">
+                <div id="topps" class="square-small flex jc-center ai-center">
                     <img src="./images/topps.svg" alt="topps logo">
                 </div>
             </div>
-            <div id="designit-grey" class="square-big">
+            <div class="square-big" id="designit-grey">
                 <img src="./images/designit.svg" alt="designit logo">
             </div>
             <div class="square-big flex jc-between ai-center wrap">
-                <div id="wbr" class="square-small">
+                <div id="wbr" class="square-small flex jc-center ai-center">
                     <img src="./images/world_bicycle_relief.svg" alt="wbr logo">
                 </div>
-                <div class="square-small header-bg">
+                <div id="hearst" class="square-small flex jc-center ai-center">
                     <img src="./images/hearst_corp.svg" alt="hearst logo">
                 </div>
-                <div id="lonely" class="square-small">
+                <div id="lonely" class="square-small flex jc-center ai-center">
                     <img src="./images/lonely_planet.svg" alt="lonely planet logo">
                 </div>
-                <div id="ccoutdoor" class="square-small">
+                <div id="ccoutdoor" class="square-small flex jc-center ai-center">
                     <img src="./images/clear_channel.svg" alt="clear channel logo">
                 </div>
             </div>
         </section>
 
         <!-- CALL TO ACTION -->
-        <section class="flex jc-around ai-center header-bg" id="cta">
+        <section class="hearst flex jc-around ai-center" id="cta">
             <h2>Porta Dropbox Business nella tua azienda</h2>
             <a href="" class="btn-light">Inizia la tua prova gratuita</a>
         </section>
