switch cards' .btn to display:inline-block

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
  
          </div>
          <!-- enterprise solution (card 4) -->
-         <div class="border-grey">
+         <div class="border-grey" id="enterprise">
              <div class="bottom-grey">
                  <i class="fa-solid fa-building"></i> Team
              </div>
@@ -423,7 +423,7 @@
         </section>
 
         <!-- CALL TO ACTION -->
-        <section class="hearst flex jc-around ai-center" id="cta">
+        <section class="flex jc-around ai-center" id="cta">
             <h2>Porta Dropbox Business nella tua azienda</h2>
             <a href="" class="btn-light">Inizia la tua prova gratuita</a>
         </section>
