add margins to sections

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                      <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
                  </div>
                  <div class="col-smaller">
-                     <a href="" class="btn">Conttatta l'ufficio vendite</a>
+                     <a href="" class="btn">Contatta l'ufficio vendite</a>
                  </div>
              </div>
          </div>
