add paddings inside the 3 top cards

--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
                  <input type="radio">
              </form>
  
-             <!-- CARDS FLEXED CONTAINER -->
+             <!-- CARDS in FLEXED CONTAINER -->
              <div class="flex jc-between ai-stretch">
                  <!-- card 1 -->
                  <div class="card border-grey">
                      <div class="bottom-grey">
-                         <i class="fa-solid fa-user"></i> Team
+                         <i class="fa-solid fa-user"></i> Singolo
                      </div>
                      <div>
                          <h3>Professional</h3>
                          <h5>€ 12.00</h5>
-                         <span>/ mese</span> <br>
+                         <span class="cost">/ mese</span> <br>
                          <ul>
                              <li>
                                  <div class="flex jc-start">
@@ -164,7 +164,7 @@
                      <div>
                          <h3>Advanced</h3>
                          <h5>€ 18.00</h5>
-                         <span>/ utente / mese</span> <br>
+                         <span class="cost">/ utente / mese</span> <br>
                          <ul>
                              <li>
                                  <div class="flex jc-start">
@@ -250,15 +250,14 @@
                      <div>
                          <h3>Enterprise</h3>
                          <h5>Contattaci</h5>
-                         <span>-</span> <br>
-                         <div><i class="fa-solid fa-user"></i> 10 o più utenti</div>
+                         <span class="cost">-</span> <br>
                          <ul>
                              <li>
                                  <div class="flex jc-start">
                                      <span>
                                          <i class="fa-solid fa-user"></i> 
                                      </span>
-                                     <span> 3 o più utenti</span> 
+                                     <span> 10 o più utenti</span> 
                                  </div>
                              </li>
                              <li>
