add text to .square-big

--- a/index.html
+++ b/index.html
@@ -404,6 +404,10 @@
             </div>
             <div class="square-big" id="designit-grey">
                 <img src="./images/designit.svg" alt="designit logo">
+                <div class="text-square-big">
+                    <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari ed uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quaanto Dropbox Paper".</p>
+                    <span>Morten Thomsen, Global IT Lead</span>
+                </div>
             </div>
             <div class="square-big flex jc-between ai-center wrap">
                 <div id="wbr" class="square-small flex jc-center ai-center">
